updates dates to human readable with timestamps and fixes footnote alignment

--- a/resources/assets/components/CampaignIdSingle/campaignidsingle.scss
+++ b/resources/assets/components/CampaignIdSingle/campaignidsingle.scss
@@ -10,3 +10,8 @@ $forge-path: '~@dosomething/forge/assets/';
     float: right;
   }
 }
+
+.footnote {
+  display: inline-block;
+  margin-left: 1%;
+}
